--- a/package.json
+++ b/package.json
@@ -86,6 +86,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "estraverse": "^4.1.1",
+    "estraverse-fb": "^1.3.1",
     "http-proxy-middleware": "^0.11.0",
     "lodash": "^4.6.1",
     "restangular": "^1.5.2"
