--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bulk-require": "^0.2.1",
     "estraverse": "^4.1.1",
     "estraverse-fb": "^1.3.1",
     "http-proxy-middleware": "^0.11.0",
