--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "angularjs-gulp-browserify-boilerplate",
+  "name": "angularjs-boilerplate",
   "version": "1.5.3",
-  "author": "Jake Marsh <jakemmarsh@gmail.com>",
-  "description": "Boilerplate using AngularJS, SASS, Gulp, and Browserify while also utilizing best practices.",
+  "author": "Marian Zagoruiko <marian.zagoruiko@gmail.com>",
+  "description": "Boilerplate using AngularJS, SASS, Gulp, and Browserify with component-based architecture.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jakemmarsh/angularjs-gulp-browserify-boilerplate.git"
+    "url": "https://github.com/mzahor/angularjs-boilerplate.git"
   },
   "keywords": [
     "express",
@@ -77,7 +77,13 @@
     "uglifyify": "^3.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "watchify": "^3.7.0",
+    "bulk-require": "^0.2.1",
+    "estraverse": "^4.1.1",
+    "estraverse-fb": "^1.3.1",
+    "http-proxy-middleware": "^0.11.0",
+    "lodash": "^4.6.1",
+    "restangular": "^1.5.2"
   },
   "scripts": {
     "test": "./node_modules/.bin/gulp test",
@@ -85,12 +91,4 @@
     "postinstall": "npm run webdriver-update"
   },
   "license": "MIT",
-  "dependencies": {
-    "bulk-require": "^0.2.1",
-    "estraverse": "^4.1.1",
-    "estraverse-fb": "^1.3.1",
-    "http-proxy-middleware": "^0.11.0",
-    "lodash": "^4.6.1",
-    "restangular": "^1.5.2"
-  }
 }
